@@ -4,7 +4,9 @@ AUX modules.conf.strict.20090730 728 RMD160 20c291e9a1ab63c7ffeda41f1b28a1a3d105
 AUX modules.conf.targeted 670 RMD160 8b36b672f70e932eeaa3288d6251d6ad79be10f3 SHA1 debfb88a6e70da185bc37ba300f08261b0e670ae SHA256 b774c2d7175f2d4f73ac7068b3c62bbaa1b6e5f92294dfdee2afdf0d2ccff8b3
 AUX modules.conf.targeted.20090730 746 RMD160 51929329cb860f5412ea4fda11e1d4bc8eafadae SHA1 80c8ac75f2102968f22f7469142b820a33a0a2c0 SHA256 435cb66eee3c702bd217a66d138d740ceb7f750380fb4681d6eae4b5acacf2c0
 AUX patchbundle-selinux-base-policy-2.20101213-r14.tar.bz2 13211 RMD160 2091fc88ed73f34be420a9c6c58b4e9bb0a42e84 SHA1 115b774c731a43595d30d640a302bbd55b2a035c SHA256 6890fe8118f81020715c153334639b78692c157969a0a653bfffa68926c1d9d6
+AUX patchbundle-selinux-base-policy-2.20101213-r15.tar.bz2 13578 RMD160 c7b7246b85df3c312f4a1e13eb87184ac9833b5c SHA1 5f6bed8aa2f391abca595509486ae96744fb6959 SHA256 517f9b711391f14c81524e8b7945a3cb45a592d697756cd6109fd7071930d184
 DIST refpolicy-2.20101213.tar.bz2 559450 RMD160 4858f792f4db5b179de6fb8419a626c29d59bdd3 SHA1 0e881e99b8950a358eadc44633551ca10f12eaee SHA256 b691ee8f6066cc19bb0d4384fe3be277d97d22e9d4ac2db0c252065e8c3535de
 EBUILD selinux-base-policy-2.20101213-r14.ebuild 3452 RMD160 29a7d0cb5ef8f04ab335e6a7abd5631b41ad7dc2 SHA1 3b6f43e1cc8e1c381fba6d7776160bf8bb8e572a SHA256 93bf3c495b1350e747403fcf90622b4bcd0075bd5a373af6e61ded8bf0814e4d
-MISC ChangeLog 17601 RMD160 5bb362127fc463c7d98f8b87c5a960aa3fb40f97 SHA1 f2d0704897cb8fc98a06c1585bed0519964e6a52 SHA256 5c146fc551404ffc675d8f470a9d969662b85d607c6c8e7532e9150cd7d9d6c5
+EBUILD selinux-base-policy-2.20101213-r15.ebuild 3452 RMD160 408ada2e4b24cf3eda27301d3733c80bdfd91c33 SHA1 43a42148aa4a134bd4ba2aa9f76c315ea860ef99 SHA256 e0a26be95639098d3840cf7f2bcf7d865ef26151f71c3643ea976dbebe369124
+MISC ChangeLog 17831 RMD160 6c77116269e58336c9510fb2a53165f23f2c40f0 SHA1 c1d20f9008cdfd078022c64c3d297a264796009b SHA256 03710b89a111b844e11ab4b5cbfd300139a8b1840d8bb65fafde2a5ee2756e2c
 MISC metadata.xml 671 RMD160 49dd94bb827c4ab2bb8043739ef7564df4cf1c07 SHA1 a92b8a5ef129707a44fe2ae1913060d02badd566 SHA256 c32ccc54ca7df400974a19ad14c093ea7b777f7a40467bdb672f441314122e55
